@@ -1,3 +1,10 @@
 # AI-20201
 Bài tập lớn AI
 Đề tài : Ứng dụng thuật toán A* vào game n-puzzle
+Hướng dẫn cài đặt:
+Tải về thư viện OpenJFX https://gluonhq.com/products/javafx/, thêm vào thư viện trong Java để có thể chạy được Project
+Thêm runtime arguments. Thay đổi run configuration của project,thêm VM arguments:
+--module-path C:\Users<user>\Downloads\javafx-sdk-11\lib --add-modules=javafx.controls
+Chạy file Main trong phần application.
+
+
